// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render home page unchanged 1`] = `
<div>
  <h1>
    Welcome 
    User!
  </h1>
</div>
`;

exports[`render welcome page unchanged 1`] = `
<div>
  <h1>
    Welcome 
    Anton!
  </h1>
</div>
`;
